--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,9 +11,25 @@
 
    <md-card flex="none" layout="column">
        <md-content flex="90" id="message-pane" style="width: 1200px;
-       background: url(https://images.designtrends.com/wp-content/uploads/2016/02/28130351/Devilish-Girl-Scary-Background.jpg);
+       background: black;
        background-repeat:no-repeat;
        background-size:cover;">
+
+       <div ng-repeat="message in messages" layout="column" layout-align="{{message.sender=='BOT' ? 'start start' : 'start end'}}">
+       <md-card style="max-width: 75%;
+       border-radius: 10px; padding: 10px; font-size: 20px;" ng-style="message.sender=='BOT'?
+       {'background-color': 'yellow'}:
+       {'background-color': 'green'}"> 
+        <span>
+          {{message.sender}}
+          {{message.text}}
+        </span>
+        <span ng-bind-html="trust(message.feedResponse.description)">
+          {{message.feedResponse.description}}
+        </span>
+        <span layout-align="end end" style="margin-top: 4px; float: right; color: #666666 ; font-size: 10px;"> {{message.time}} </span>
+      </md-card>
+      </div>
 
        </md-content>
        <md-card flex="10" style="margin: 0px" layout="row" layout-align="space-between center" class="md-whiteframe-8dp">
